# ising-wgpu

./: Cargo.toml  README.md
src/: lattice.rs  lib.rs  main.rs  shader.wgsl  spin.rs  texture.rs
