[package]
name = "ising-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.24.1"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.17.0"
winit = "0.28.6"
